[project]
name = "linqfollowoupagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.135.1",
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.0",
    "google-genai>=1.68.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "thefuzz>=0.22.1",
    "uvicorn>=0.42.0",
]
